Event Bus & Websocket: (#2889)
- Replace EBus with Spring Events
- Add new websocket & security configuration